Added Card List Multilingual

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -2,5 +2,7 @@
     "subtitle": "Unofficial Menu Screen Database",
     "update_visible": "Visible Latest Update Only",
     "customize_title": "Customize Guide",
-    "customize_subtitle": "Read first here if you wonder."
+    "customize_subtitle": "Read first here if you wonder.",
+    "available": "Available",
+    "unavailable": "Unavailable"
 }
