--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -78,7 +78,7 @@
         },
         {
             "name": "남극 반도",
-            "description": "4시즌 - 남극 반도"
+            "description": "3시즌 - 남극 반도"
         },
         {
             "name": "라이프위버",
@@ -127,6 +127,10 @@
         {
             "name": "환상의 겨울나라 (2023)",
             "description": "8시즌 - 환상의 겨울나라"
+        },
+        {
+            "name": "고대 수호자",
+            "description": "9시즌 - 신화 스킨"
         }
     ]
 }
