--- a/public/locales/en/lobby.json
+++ b/public/locales/en/lobby.json
@@ -131,6 +131,10 @@
         {
             "name": "Ancient Caller",
             "description": "Season 9 - Mythic Skin"
+        },
+        {
+            "name": "Cowboy Bebop",
+            "description": "Season 9 - Cowboy Bebop Event"
         }
     ]
 }
