--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -131,6 +131,10 @@
         {
             "name": "고대 수호자",
             "description": "9시즌 - 신화 스킨"
+        },
+        {
+            "name": "카우보이 비밥",
+            "description": "9시즌 - 카우보이 비밥 이벤트"
         }
     ]
 }
