--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -135,6 +135,14 @@
         {
             "name": "카우보이 비밥",
             "description": "9시즌 - 카우보이 비밥 이벤트"
+        },
+        {
+            "name": "모험의 세계로",
+            "description": "10시즌 - 모험의 세계로"
+        },
+        {
+            "name": "미러워치",
+            "description": "10시즌 - 미러워치 이벤트"
         }
     ]
 }
