--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -143,6 +143,10 @@
         {
             "name": "미러워치",
             "description": "10시즌 - 미러워치 이벤트"
+        },
+        {
+            "name": "미러워치 (일러스트)",
+            "description": "10시즌 - 미러워치 이벤트"
         }
     ]
 }
