--- a/public/locales/en/lobby.json
+++ b/public/locales/en/lobby.json
@@ -147,6 +147,10 @@
         {
             "name": "Mirrorwatch (Illust)",
             "description": "Season 10 - Mirrorwatch Event"
+        },
+        {
+            "name": "Porsche",
+            "description": "Season 10 - Porsche Event"
         }
     ]
 }
