--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -147,6 +147,10 @@
         {
             "name": "미러워치 (일러스트)",
             "description": "10시즌 - 미러워치 이벤트"
+        },
+        {
+            "name": "포르쉐",
+            "description": "10시즌 - 포르쉐 이벤트"
         }
     ]
 }
