--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -151,6 +151,22 @@
         {
             "name": "포르쉐",
             "description": "10시즌 - 포르쉐 이벤트"
+        },
+        {
+            "name": "재앙의 여제",
+            "description": "11시즌 - 신화 스킨"
+        },
+        {
+            "name": "사이버악마 겐지 (적)",
+            "description": "1시즌 - 신화 스킨"
+        },
+        {
+            "name": "사이버악마 겐지 (녹)",
+            "description": "1시즌 - 신화 스킨"
+        },
+        {
+            "name": "사이버악마 겐지 (분홍)",
+            "description": "1시즌 - 신화 스킨"
         }
     ]
 }
