--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,6 +1,6 @@
 {
     "subtitle": "Unofficial Menu Screen Database",
-    "update_visible": "Visible Latest Update Only",
+    "update_visible": "Show Latest Update Only",
     "customize_title": "Customize Guide",
     "customize_subtitle": "Read first here if you wonder.",
     "available": "Available",
