Added Rose Gold Mercy

--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -167,6 +167,10 @@
         {
             "name": "사이버악마 겐지 (분홍)",
             "description": "1시즌 - 신화 스킨"
+        },
+        {
+            "name": "로즈 골드 메르시",
+            "description": "11시즌 - BCRF 기부 이벤트"
         }
     ]
 }
