--- a/public/locales/en/lobby.json
+++ b/public/locales/en/lobby.json
@@ -167,6 +167,10 @@
         {
             "name": "Cyber Demon Genji (Pink)",
             "description": "Season 1 - Mythic Skin"
+        },
+        {
+            "name": "Rose Gold Mercy",
+            "description": "Season 11 - BCRF Funding Event"
         }
     ]
 }
