--- a/public/locales/en/lobby.json
+++ b/public/locales/en/lobby.json
@@ -171,6 +171,10 @@
         {
             "name": "Rose Gold Mercy",
             "description": "Season 11 - BCRF Funding Event"
+        },
+        {
+            "name": "Transformers",
+            "description": "Season 11 - Transformers Event"
         }
     ]
 }
