--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -171,6 +171,10 @@
         {
             "name": "로즈 골드 메르시",
             "description": "11시즌 - BCRF 기부 이벤트"
+        },
+        {
+            "name": "트랜스포머",
+            "description": "11시즌 - 트랜스포머 이벤트"
         }
     ]
 }
