Added Mythic Weapon Screen

--- a/public/locales/en/lobby.json
+++ b/public/locales/en/lobby.json
@@ -175,6 +175,10 @@
         {
             "name": "Transformers",
             "description": "Season 11 - Transformers Event"
+        },
+        {
+            "name": "Bound Demon",
+            "description": "Season 11 - Mythic Weapon"
         }
     ]
 }
