--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -175,6 +175,10 @@
         {
             "name": "트랜스포머",
             "description": "11시즌 - 트랜스포머 이벤트"
+        },
+        {
+            "name": "속박된 악마",
+            "description": "11시즌 - 신화 무기"
         }
     ]
 }
