Added Lifeguard Art

--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -179,6 +179,10 @@
         {
             "name": "속박된 악마",
             "description": "11시즌 - 신화 무기"
+        },
+        {
+            "name": "해상 구조대",
+            "description": "11시즌 - 해상 구조대 스킨 출시"
         }
     ]
 }
