--- a/public/locales/en/lobby.json
+++ b/public/locales/en/lobby.json
@@ -179,6 +179,10 @@
         {
             "name": "Bound Demon",
             "description": "Season 11 - Mythic Weapon"
+        },
+        {
+            "name": "Lifeguard",
+            "description": "Season 11 - Lifeguard Skin Release"
         }
     ]
 }
