--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -183,6 +183,14 @@
         {
             "name": "해상 구조대",
             "description": "11시즌 - 해상 구조대 스킨 출시"
+        },
+        {
+            "name": "주노",
+            "description": "12시즌 - 주노 출시"
+        },
+        {
+            "name": "아누비스",
+            "description": "12시즌 - 신화 스킨"
         }
     ]
 }
