--- a/public/locales/en/lobby.json
+++ b/public/locales/en/lobby.json
@@ -191,6 +191,10 @@
         {
             "name": "Anubis",
             "description": "Season 12 - Mythic Skin"
+        },
+        {
+            "name": "Sylvanas",
+            "description": "Season 12 - WoW Event"
         }
     ]
 }
