--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -191,6 +191,10 @@
         {
             "name": "아누비스",
             "description": "12시즌 - 신화 스킨"
+        },
+        {
+            "name": "실바나스",
+            "description": "12시즌 - WoW 이벤트"
         }
     ]
 }
