--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -195,6 +195,10 @@
         {
             "name": "실바나스",
             "description": "12시즌 - WoW 이벤트"
+        },
+        {
+            "name": "한밤의 태양",
+            "description": "12시즌 - 신화 무기"
         }
     ]
 }
