--- a/public/locales/en/lobby.json
+++ b/public/locales/en/lobby.json
@@ -199,6 +199,10 @@
         {
             "name": "Midnight Sun",
             "description": "Season 12 - Mythic Weapon"
+        },
+        {
+            "name": "Spellbinder",
+            "description": "Season 13 - Mythic Skin"
         }
     ]
 }
