--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -199,6 +199,10 @@
         {
             "name": "한밤의 태양",
             "description": "12시즌 - 신화 무기"
+        },
+        {
+            "name": "주문술사",
+            "description": "13시즌 - 신화 스킨"
         }
     ]
 }
