--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -138,7 +138,7 @@
         },
         {
             "name": "모험의 세계로",
-            "description": "10시즌 - 모험의 세계로"
+            "description": "10시즌 - 벤처 출시"
         },
         {
             "name": "미러워치",
@@ -203,6 +203,10 @@
         {
             "name": "주문술사",
             "description": "13시즌 - 신화 스킨"
+        },
+        {
+            "name": "나의 히어로 아카데미아",
+            "description": "13시즌 - 나히아 이벤트"
         }
     ]
 }
