--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -207,6 +207,18 @@
         {
             "name": "나의 히어로 아카데미아",
             "description": "13시즌 - 나히아 이벤트"
+        },
+        {
+            "name": "오버워치: 클래식",
+            "description": "13시즌 - 클래식 모드 출시"
+        },
+        {
+            "name": "네온 거리",
+            "description": "13시즌 - OWCS 파이널"
+        },
+        {
+            "name": "구원",
+            "description": "13시즌 - 신화 무기"
         }
     ]
 }
