--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -219,6 +219,18 @@
         {
             "name": "구원",
             "description": "13시즌 - 신화 무기"
+        },
+        {
+            "name": "해저드",
+            "description": "14시즌 - 해저드 출시"
+        },
+        {
+            "name": "토르",
+            "description": "14시즌 - 신화 스킨"
+        },
+        {
+            "name": "아바타: 아앙의 전설",
+            "description": "14시즌 - 아앙의 전설 콜라보"
         }
     ]
 }
