--- a/public/locales/en/lobby.json
+++ b/public/locales/en/lobby.json
@@ -231,6 +231,14 @@
         {
             "name": "Avatar: The Last Airbender",
             "description": "Season 14 - ATLA Collab"
+        },
+        {
+            "name": "Lead Rose",
+            "description": "Season 14 - Mythic Weapon"
+        },
+        {
+            "name": "Celestial",
+            "description": "Season 14 - Celestial Skin Release"
         }
     ]
 }
