--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -231,6 +231,14 @@
         {
             "name": "아바타: 아앙의 전설",
             "description": "14시즌 - 아앙의 전설 콜라보"
+        },
+        {
+            "name": "납장미",
+            "description": "14시즌 - 신화 무기"
+        },
+        {
+            "name": "천상",
+            "description": "14시즌 - 천상 스킨 출시"
         }
     ]
 }
