--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -209,7 +209,7 @@
             "description": "13시즌 - 나히아 이벤트"
         },
         {
-            "name": "오버워치: 클래식",
+            "name": "오버워치: 클래식 (일러스트)",
             "description": "13시즌 - 클래식 모드 출시"
         },
         {
@@ -239,6 +239,10 @@
         {
             "name": "천상",
             "description": "14시즌 - 천상 스킨 출시"
+        },
+        {
+            "name": "오버워치: 클래식",
+            "description": "14시즌 - 클래식 모드 출시"
         }
     ]
 }
