--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -243,6 +243,14 @@
         {
             "name": "오버워치: 클래식",
             "description": "14시즌 - 클래식 모드 출시"
+        },
+        {
+            "name": "비휴",
+            "description": "15시즌 - 신화 스킨"
+        },
+        {
+            "name": "고향",
+            "description": "15시즌 - 중국 서버 출시"
         }
     ]
 }
