--- a/public/locales/en/lobby.json
+++ b/public/locales/en/lobby.json
@@ -271,6 +271,10 @@
         {
             "name": "Freja",
             "description": "Season 16 - Freja Release"
+        },
+        {
+            "name": "Gundam W",
+            "description": "Season 16 - Gundam W Event"
         }
     ]
 }
