--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -271,6 +271,10 @@
         {
             "name": "프레야",
             "description": "16시즌 - 프레야 출시"
+        },
+        {
+            "name": "건담 W",
+            "description": "16시즌 - 건담 W 이벤트"
         }
     ]
 }
