--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -275,6 +275,14 @@
         {
             "name": "건담 W",
             "description": "16시즌 - 건담 W 이벤트"
+        },
+        {
+            "name": "스트리트 파이터 6",
+            "description": "16시즌 - 스트리트 파이터 6 이벤트"
+        },
+        {
+            "name": "수호천사 마지테크",
+            "description": "16시즌 - 신화 무기"
         }
     ]
 }
