Added Heart of Hope

--- a/public/locales/en/lobby.json
+++ b/public/locales/en/lobby.json
@@ -277,6 +277,10 @@
             "description": "Season 16 - Gundam W Event"
         },
         {
+            "name": "Heart of Hope",
+            "description": "Season 16 - Mythic Skin"
+        },
+        {
             "name": "Street Fighter 6",
             "description": "Season 16 - Street Fighter 6 Event"
         },
