--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -277,6 +277,10 @@
             "description": "16시즌 - 건담 W 이벤트"
         },
         {
+            "name": "희망의 하트",
+            "description": "16시즌 - 신화 스킨"
+        },
+        {
             "name": "스트리트 파이터 6",
             "description": "16시즌 - 스트리트 파이터 6 이벤트"
         },
