--- a/public/locales/en/lobby.json
+++ b/public/locales/en/lobby.json
@@ -287,6 +287,10 @@
         {
             "name": "Merciful Magitech",
             "description": "Season 16 - Mythic Weapon"
+        },
+        {
+            "name": "Horang Hero, Steel Death",
+            "description": "Season 17 - Mythic Skin, Weapon"
         }
     ]
 }
