--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -287,6 +287,10 @@
         {
             "name": "수호천사 마지테크",
             "description": "16시즌 - 신화 무기"
+        },
+        {
+            "name": "호랑 영웅, 강철 사신",
+            "description": "17시즌 - 신화 스킨, 무기"
         }
     ]
 }
