Added G.I. Joe Collab

--- a/public/locales/en/lobby.json
+++ b/public/locales/en/lobby.json
@@ -291,6 +291,10 @@
         {
             "name": "Horang Hero, Steel Death",
             "description": "Season 17 - Mythic Skin, Weapon"
+        },
+        {
+            "name": "G.I. Joe",
+            "description": "Season 17 - G.I. Joe Event"
         }
     ]
 }
