--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -291,6 +291,10 @@
         {
             "name": "호랑 영웅, 강철 사신",
             "description": "17시즌 - 신화 스킨, 무기"
+        },
+        {
+            "name": "지.아이.조",
+            "description": "17시즌 - 지.아이.조 이벤트"
         }
     ]
 }
