--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -295,6 +295,10 @@
         {
             "name": "지.아이.조",
             "description": "17시즌 - 지.아이.조 이벤트"
+        },
+        {
+            "name": "찬란한 천사",
+            "description": "17시즌 - OWCS MSC 이벤트"
         }
     ]
 }
