--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -302,7 +302,7 @@
         },
         {
             "name": "NERF",
-            "description": "17시즌 - NERF 이벤트
+            "description": "17시즌 - NERF 이벤트"
         }
     ]
 }
