--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -303,6 +303,18 @@
         {
             "name": "NERF",
             "description": "17시즌 - NERF 이벤트"
+        },
+        {
+            "name": "우양",
+            "description": "18시즌 - 우양 출시"
+        },
+        {
+            "name": "울트라바이올렛 파수꾼, 불타는 석양",
+            "description": "18시즌 - 신화 스킨"
+        },
+        {
+            "name": "울트라바이올렛 파수꾼, 불타는 석양 (일러스트)",
+            "description": "18시즌 - 신화 스킨"
         }
     ]
 }
