--- a/public/locales/en/lobby.json
+++ b/public/locales/en/lobby.json
@@ -315,6 +315,14 @@
         {
             "name": "Ultraviolet Sentinel, Blazing Sunsetter (Illust)",
             "description": "Season 18 - Mythic Skin"
+        },
+        {
+            "name": "Phantom Thieves",
+            "description": "Season 18 - Persona 5 Event"
+        },
+        {
+            "name": "Anniversary 2025",
+            "description": "Season 18 - Anniversary Event"
         }
     ]
 }
