--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -315,6 +315,14 @@
         {
             "name": "울트라바이올렛 파수꾼, 불타는 석양 (일러스트)",
             "description": "18시즌 - 신화 스킨"
+        },
+        {
+            "name": "마음의 괴도단",
+            "description": "18시즌 - 페르소나 5 이벤트"
+        },
+        {
+            "name": "감사제 2025",
+            "description": "18시즌 - 감사제 이벤트"
         }
     ]
 }
