--- a/public/locales/en/lobby.json
+++ b/public/locales/en/lobby.json
@@ -323,6 +323,14 @@
         {
             "name": "Anniversary 2025",
             "description": "Season 18 - Anniversary Event"
+        },
+        {
+            "name": "Divine Druid, Spirit Keeper",
+            "description": "Season 19 - Mythic Skin"
+        },
+        {
+            "name": "Gadgets",
+            "description": "Season 19 - Stadium Update"
         }
     ]
 }
