--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -323,6 +323,14 @@
         {
             "name": "감사제 2025",
             "description": "18시즌 - 감사제 이벤트"
+        },
+        {
+            "name": "천상의 드루이드, 혼령 지킴이",
+            "description": "19시즌 - 신화 스킨"
+        },
+        {
+            "name": "가젯",
+            "description": "19시즌 - 스타디움 업데이트"
         }
     ]
 }
