Added Halloween Event Lobby.

--- a/public/locales/en/lobby.json
+++ b/public/locales/en/lobby.json
@@ -331,6 +331,10 @@
         {
             "name": "Gadgets",
             "description": "Season 19 - Stadium Update"
+        },
+        {
+            "name": "Haunted Masquerade",
+            "description": "Season 19 - Halloween Event"
         }
     ]
 }
