--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -331,6 +331,10 @@
         {
             "name": "가젯",
             "description": "19시즌 - 스타디움 업데이트"
+        },
+        {
+            "name": "귀신 들린 가장무도회",
+            "description": "19시즌 - 할로윈 이벤트"
         }
     ]
 }
