--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -37,7 +37,7 @@
             "description": "알파 테스트 (2022)"
         },
         {
-            "name": "원펀맨",
+            "name": "단련",
             "description": "3시즌 - 원펀맨 이벤트"
         },
         {
@@ -335,6 +335,10 @@
         {
             "name": "귀신 들린 가장무도회",
             "description": "19시즌 - 할로윈 이벤트"
+        },
+        {
+            "name": "원펀맨",
+            "description": "19시즌 - 원펀맨 이벤트"
         }
     ]
 }
