--- a/public/locales/en/lobby.json
+++ b/public/locales/en/lobby.json
@@ -339,6 +339,14 @@
         {
             "name": "One Punch Man",
             "description": "Season 19 - One Punch Man Event"
+        },
+        {
+            "name": "Cyber Fuel",
+            "description": "Season 19 - Mythic Skin"
+        },
+        {
+            "name": "Scarlet Flare",
+            "description": "Season 19 - OWCS World Finals Event"
         }
     ]
 }
