--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -339,6 +339,14 @@
         {
             "name": "원펀맨",
             "description": "19시즌 - 원펀맨 이벤트"
+        },
+        {
+            "name": "사이버 연료",
+            "description": "19시즌 - 신화 스킨"
+        },
+        {
+            "name": "선홍빛 섬광",
+            "description": "19시즌 - OWCS 월드 파이널 이벤트"
         }
     ]
 }
