--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -347,6 +347,18 @@
         {
             "name": "선홍빛 섬광",
             "description": "19시즌 - OWCS 월드 파이널 이벤트"
+        },
+        {
+            "name": "벤데타",
+            "description": "20시즌 - 벤데타 출시"
+        },
+        {
+            "name": "신성한 무법자, 캡슐 기관포",
+            "description": "20시즌 - 신화 스킨"
+        },
+        {
+            "name": "2025 환상의 겨울나라",
+            "description": "20시즌 - 환상의 겨울나라 이벤트"
         }
     ]
 }
