--- a/public/locales/en/lobby.json
+++ b/public/locales/en/lobby.json
@@ -359,6 +359,10 @@
         {
             "name": "2025 Winter Wonderland",
             "description": "Season 20 - Winter Wonderland Event"
+        },
+        {
+            "name": "Magma Titan",
+            "description": "Season 20 - Mythic Skin"
         }
     ]
 }
