--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -359,6 +359,10 @@
         {
             "name": "2025 환상의 겨울나라",
             "description": "20시즌 - 환상의 겨울나라 이벤트"
+        },
+        {
+            "name": "마그마 타이탄",
+            "description": "20시즌 - 신화 스킨"
         }
     ]
 }
