--- a/public/locales/ko/lobby.json
+++ b/public/locales/ko/lobby.json
@@ -363,6 +363,54 @@
         {
             "name": "마그마 타이탄",
             "description": "20시즌 - 신화 스킨"
+        },
+        {
+            "name": "천상의 수호자",
+            "description": "2026 1시즌 - 신화 스킨"
+        },
+        {
+            "name": "스타 슈터",
+            "description": "2026 1시즌 - 신화 무기"
+        },
+        {
+            "name": "헬로 키티와 친구들",
+            "description": "2026 1시즌 - 헬로 키티 이벤트"
+        },
+        {
+            "name": "정복 (1주 차)",
+            "description": "2026 1시즌 - 정복 이벤트"
+        },
+        {
+            "name": "정복 (2주 차)",
+            "description": "2026 1시즌 - 정복 이벤트"
+        },
+        {
+            "name": "정복 (3주 차)",
+            "description": "2026 1시즌 - 정복 이벤트"
+        },
+        {
+            "name": "정복 (4주 차)",
+            "description": "2026 1시즌 - 정복 이벤트"
+        },
+        {
+            "name": "2026 경쟁전",
+            "description": "2026 1시즌 - 경쟁전 업데이트"
+        },
+        {
+            "name": "엠레",
+            "description": "2026 1시즌 - 엠레 출시"
+        },
+        {
+            "name": "제트팩 캣",
+            "description": "2026 1시즌 - 제트팩 캣 출시"
+        },
+        {
+            "name": "도미나",
+            "description": "2026 1시즌 - 도미나 출시"
+        },
+        {
+            "name": "미즈키",
+            "description": "2026 1시즌 - 미즈키 출시"
         }
     ]
 }
