--- a/public/locales/ko/guide.json
+++ b/public/locales/ko/guide.json
@@ -1,5 +1,5 @@
 {
-    "section1_title": "1. 오버워치 2 게임 설정 열기",
+    "section1_title": "1. 오버워치 게임 설정 열기",
     "section1_subtitle": "Battle.net 런처 실행 후, 톱니바퀴 아이콘을 클릭한 다음 <1>게임 설정</1>을 선택해 주세요",
     "section2_title": "2. 명령줄 인수 추가 활성화",
     "section2_subtitle": "<0>명령줄 인수 추가</0>를 활성화 하고 복사한 코드를 붙여넣어주세요. 설정이 끝났습니다!"
